--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       <!-- #endregion -->
       
       <!-- #region parallax-->
-      <div class="w-[100%] h-[250px] bg-[url('/public/images/cooking/img-1.png')] bg-no-repeat bg-center bg-fixed bg-cover"></div>
+      <div class="paralax w-[100%] h-[250px] bg-no-repeat bg-center bg-fixed bg-cover"></div>
       <!-- #endregion -->
 
       <!-- #region magale -->
