edit address bg-img

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="goToTop" class="wrapper">
 
       <!-- #region header-->
-      <header class="header mobile:z-[10000] mobile:box-border mobile:p-0 mobile:w-[100%] mobile:h-[170px]  mobile:sticky mobile:top-0 mobile:left-0 desktop:z-[10000] desktop:sticky desktop:top-0 desktop:left-0 desktop:flex desktop:justify-center desktop:w-[100%] desktop:h-[100px] desktop:bg-[#252525]">
+      <header class="header mobile:z-[10000] mobile:box-border mobile:p-0 mobile:w-[100%] mobile:h-[170px]  mobile:sticky mobile:top-0 mobile:left-0 desktop:z-[10000] desktop:sticky desktop:top-0 desktop:left-0 desktop:flex desktop:justify-center desktop:w-[100%] desktop:h-[100px] bg-[url('/footer/header-back.png')]">
         <nav class="">
           <div class="flex flex-wrap flex-col">
             <div class="desktop:w-[1060px] desktop:h-[100px]">
@@ -91,19 +91,19 @@
                   <a href="#" class="desktop:font-['Yekan'] w-[62px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear">EN</a>
                 </li>
               </ul>
-              <div class="desktop:hidden mobile:w-[100%] mobile:h-[120px] mobile:bg-[#252525] mobile:flex mobile:items-center mobile:justify-center">
+              <div class="desktop:hidden mobile:w-[100%] mobile:h-[120px] mobile:bg-[url('/footer/header-back.png')] mobile:flex mobile:items-center mobile:justify-center">
                 <a href="#">
                   <img class="desktop:absolute desktop:right-[110px] desktop:top-[50px]" src="./public/images/header/logo-fr.png" alt="" />
                 </a>
               </div>
-              <div class="desktop:hidden mobile:w-[100%] mobile:h-[50px] mobile:bg-[#252525] mobile:flex mobile:items-center mobile:pr-[25px]">
+              <div class="desktop:hidden mobile:w-[100%] mobile:h-[50px] mobile:bg-[url('/footer/header-back.png')] mobile:flex mobile:items-center mobile:pr-[25px]">
                 <div class="bars mobile:w-[30px] mobile:h-[30px] mobile:flex mobile:justify-center mobile:items-center mobile:flex-col mobile:gap-[4px] mobile:cursor-pointer">
                   <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
                   <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
                   <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
                 </div>
               </div>
-              <div class="desktop:hidden mobile:z-[-99] men mobile:w-[100%] mobile:h-[360px] mobile:bg-[#252525] mobile:absolute mobile:top-[-100%] mobile:transition-all mobile:duration-300 mobile:ease-linear">
+              <div class="desktop:hidden mobile:z-[-99] men mobile:w-[100%] mobile:h-[360px] mobile:bg-[url('/footer/header-back.png')] mobile:absolute mobile:top-[-100%] mobile:transition-all mobile:duration-300 mobile:ease-linear">
                 <nav class="mobile:flex mobile:flex-wrap mobile:flex-col mobile:pr-[25px] mobile:gap-[10px]">
                   <div class="mobile:font-['Yekan'] mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
                     <a href="#">صفحه اصلی</a>
@@ -500,16 +500,15 @@
       <!-- #region footer-->
       <section class="flex flex-col mobile:w-[100%] mobile:h-[580px] tablet:w-[100%] tablet:h-[580px] desktop:w-[100%] desktop:h-[580px] ">
         <div class="bg-[#eeefef] flex flex-row justify-center items-center mobile:w-[100%] mobile:h-[95px] tablet:w-[100%] tablet:h-[95px] desktop:w-[100%] desktop:h-[95px]">
-          <a href="#" class="bg-[url('/public/images/footer/img-1.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-12.png')] transition-all duration-300 ease-linear"></a>
-          <a href="#" class="bg-[url('/public/images/footer/img-3.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-2.png')] transition-all duration-300 ease-linear"></a>
-          <a href="#" class="bg-[url('/public/images/footer/img-4.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-8.png')] transition-all duration-300 ease-linear"></a>
-          <a href="#" class="bg-[url('/public/images/footer/img-5.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-9.png')] transition-all duration-300 ease-linear"></a>
-          <a href="#" class="bg-[url('/public/images/footer/img-6.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-10.png')] transition-all duration-300 ease-linear"></a>
-          <a href="#" class="bg-[url('/public/images/footer/img-7.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-11.png')] transition-all duration-300 ease-linear"></a>
-        
+          <a href="#" class="bg-[url('/footer/img-1.png')] w-[55px] h-[55px] hover:bg-[url('/footer/img-12.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/footer/img-3.png')] w-[55px] h-[55px] hover:bg-[url('/footer/img-2.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/footer/img-4.png')] w-[55px] h-[55px] hover:bg-[url('/footer/img-8.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/footer/img-5.png')] w-[55px] h-[55px] hover:bg-[url('/footer/img-9.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/footer/img-6.png')] w-[55px] h-[55px] hover:bg-[url('/footer/img-10.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/footer/img-7.png')] w-[55px] h-[55px] hover:bg-[url('/footer/img-11.png')] transition-all duration-300 ease-linear"></a>
         </div>
         <div class="bg-[#ed1c24] w-[100%] h-[25px]"></div>
-        <div class="bg-[#252525] mobile:w-[100%] mobile:h-auto mobile:flex mobile:justify-center mobile:item-center tablet:w-[100%] tablet:h-[345px] tablet:flex tablet:justify-center tablet:item-center desktop:w-[100%] desktop:h-[345px] desktop:flex">
+        <div class="bg-[url('/footer/header-back.png')] mobile:w-[100%] mobile:h-auto mobile:flex mobile:justify-center mobile:item-center tablet:w-[100%] tablet:h-[345px] tablet:flex tablet:justify-center tablet:item-center desktop:w-[100%] desktop:h-[345px] desktop:flex">
           <div class="mobile:w-[100%] mobile:h-auto mobile:mx-5 mobile:flex mobile:flex-col tablet:w-[700px] tablet:h-[345px] tablet:flex tablet:flex-row tablet:gap-5 desktop:w-[700px] desktop:h-[345px] desktop:flex desktop:flex-row desktop:gap-5">
             <div class="mobile:w-[100%] w-[170px] h-[345px] flex flex-col justify-between items-center">
               <div class="">
@@ -565,7 +564,7 @@
             </div>
           </div>
         </div>
-        <div class="bg-[#252525] mobile:w-[100%] mobile:h-[125px] tablet:w-[100%] tablet:h-[125px] desktop:w-[100%] desktop:h-[125px] flex flex-col justify-center items-center gap-2">
+        <div class="bg-[url('/footer/header-back.png')] mobile:w-[100%] mobile:h-[125px] tablet:w-[100%] tablet:h-[125px] desktop:w-[100%] desktop:h-[125px] flex flex-col justify-center items-center gap-2">
           <span class="text-[#9f9f9f] text-[15px] font-normal font-['Yekan'] leading-[15px]">All Right Reserved Golestan Company 2022-2025</span>
           <span class="text-[#7b7b7b] text-[14px] font-normal font-['Yekan'] leading-[14px]">Designed By: AMIN Khodajoo</span>
         </div>
